tests/negative/class/class_generic_nested_constructor_assign_mismatch.tx
// EXPECTED: COMPILE_ERROR
// Description: Constructor inference must stay strict for nested generic assignments.

class Box<T> {
    value: T;

    constructor(value: T) {
        this.value = value;
    }
}

function main() {
    let labels: Box<string[]> = new Box([1, 2, 3]);
    print(labels);
}
